@@ -2,7 +2,7 @@ import os, sys, re, string, types
 sys.path.append('../../framework')
 import bldutil
 
-progs = '''     
+progs = '''
 aastack agmig ai2refl avo beamspray cascade c2r cell2 cell3 cgscan
 cmp2shot constfdmig2 cos2ang depth2time diffoc diffraction dimag dmo
 dsr dsr2 envelope fincon findmo finstack fkamo fkdmo fold fourvc
@@ -14,11 +14,11 @@ nmov nmow nmow_adj ovc oway1 pmig pnmo pnmo3d pp2psang pp2psang2
 pp2pstsic preconstkirch prestolt ptaupmo3 ptaupmo ptaupmoVTI pveltran
 map2coh pveltranVTI pveltran3 pyramid radial radial2 radon randrefl
 rays2 rays2a rays3 refer ricker ricker1 rweab rwesrmig rwezomig s2ofz
-s2ofz2 segy2rsf segyheader segyread segywrite shifts shoot2 shot2cmp
+s2ofz2 segyheader segyread segywrite shifts shoot2 shot2cmp
 shotconstkirch shotholes shotprop sin slant srmva srsyn sstep2 stolt
-stolt2 stoltstretch stretch su2rsf tan2ang taupmo time2depth
-tlagtoang2d tshift txpscan txpnmo velmod veltran voft vofz vscan
-xlagtoang2d zoeppritz zomig zomva
+stolt2 stoltstretch stretch tan2ang taupmo time2depth tlagtoang2d
+tshift txpscan txpnmo velmod veltran voft vofz vscan xlagtoang2d
+zoeppritz zomig zomva
 '''
 
 libsrc = 'segy'
